<resources>
    <string name="app_name">Only One Book</string>
    <string name="id">id</string>
    <string name="k_id">아이디</string>
    <string name="password">password</string>
    <string name="k_password">비밀번호</string>
    <string name="set_login">로그인 상태 유지</string>
    <string name="login">로그인</string>
    <string name="noUser">아직 계정이 없으신가요?</string>
    <string name="yseUser">이미 계정이 있으신가요?</string>
    <string name="name">name</string>
    <string name="k_name">이름</string>
    <string name="signUp">회원가입</string>
    <string name="new_post">새로 올라온 작품</string>
    <string name="my_scrap">내가 스크랩 한 글</string>
    <string name="no_post">글이 없습니다.</string>
    <string name="profile_title">님의 프로필</string>
    <string name="tag_scrap">태그별 스크랩</string>
    <string name="my_post">내 작품</string>
    <string name="title">제목</string>
    <string name="textSize">글자크기</string>
    <string name="writing">글쓰기</string>
    <string name="save">저장</string>
</resources>