<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    tools:context=".ui.fragment.SignUpFragment">

    <TextView
        android:id="@+id/signUp_appName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUp_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/k_name"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_appName_textView" />

    <EditText
        android:id="@+id/signUp_name_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_round_button"
        android:gravity="left"
        android:hint="@string/name"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signUp_name_textView" />

    <TextView
        android:id="@+id/signUp_id_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/k_id"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signUp_name_button" />

    <EditText
        android:id="@+id/signUp_id_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_round_button"
        android:gravity="left"
        android:hint="@string/id"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signUp_id_textView" />

    <TextView
        android:id="@+id/signUp_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/k_password"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_id_button" />

    <EditText
        android:id="@+id/signUp_password_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/sign_round_button"
        android:gravity="left"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signUp_password_textView" />

    <Button
        android:id="@+id/signUp_signUp_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/sign_color_button"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signUp_password_button" />

    <Button
        android:id="@+id/signIn_noUser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/yseUser"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_signUp_button" />

</androidx.constraintlayout.widget.ConstraintLayout>