<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <TextView
        android:id="@+id/profile_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/profile_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_tag_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/tag_scrap"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title_textView" />

    <Button
        android:id="@+id/profile_tag1_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:background="@drawable/profile_round_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_tag_textView" />

    <Button
        android:id="@+id/profile_tag2_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:background="@drawable/profile_round_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_tag_textView" />

    <Button
        android:id="@+id/profile_tag3_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:background="@drawable/profile_round_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_tag1_button" />

    <Button
        android:id="@+id/profile_tag4_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:background="@drawable/profile_round_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_tag2_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_myPost_textView"
        android:text="@string/my_post"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_tag3_button"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="35dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:id="@+id/profile_myPost_recycler"
        app:layout_constraintTop_toBottomOf="@id/profile_myPost_textView"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>